--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Daily Polygon DApp</title>
     <link rel="stylesheet" href="styles.css">
     
-    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js" integrity="sha384-ActualHashHere" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js" integrity="sha384-9y/BjkIzx7j89MeRnmRNhM8XYMmb/COkLfipDnZQF6AkZUm7KckaLcb4GBn/jYdZ" crossorigin="anonymous"></script>
     <script src="app.js" defer></script>
     <script src="https://unpkg.com/@walletconnect/client/dist/umd/index.min.js" integrity="sha384-9y/BjkIzx7j89MeRnmRNhM8XYMmb/COkLfipDnZQF6AkZUm7KckaLcb4GBn/jYdZ" crossorigin="anonymous"></script>
 
