--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Daily Polygon DApp</title>
     <link rel="stylesheet" href="styles.css">
     
-    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/@walletconnect/client/dist/umd/index.min.js" crossorigin="anonymous"></script>
     <script src="app.js" defer></script>
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https://raw.githubusercontent.com; script-src 'self' 'nonce-your-nonce-value';">
 </head>
