--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Daily Polygon DApp</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://unpkg.com/web3/dist/web3.min.js"></script>
-    <script src="https://unpkg.com/@walletconnect/client/dist/umd/index.min.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/@walletconnect/web3-provider/dist/umd/index.min.js"></script>
     <script src="app.js" defer></script>
 </head>
 <body>
