--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Polygon DApp</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://unpkg.com/web3/dist/web3.min.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/web3@4.1.0-rc.0/dist/web3.min.js"></script>
     <script src="https://unpkg.com/@walletconnect/web3-provider/dist/umd/index.min.js"></script>
     <script src="app.js" defer></script>
 </head>
