--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daily Polygon DApp</title>
-    <link rel="stylesheet" href="styles.css">
-    <script type="text/javascript" src="https://unpkg.com/web3@4.1.0-rc.0/dist/web3.min.js"></script>
-    <script src="https://unpkg.com/@walletconnect/web3-provider/dist/umd/index.min.js"></script>
-    <script src="app.js" defer></script>
+    <title>WalletConnect Example</title>
+    <script type="module" src="https://github.com/PolyDapps/dailypolygon/blob/main/app.js"></script> <!-- Update with the correct path -->
 </head>
 <body>
     <header>
