--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WalletConnect Example</title>
-    <script type="module" src="https://github.com/PolyDapps/dailypolygon/blob/main/app.js"></script> <!-- Update with the correct path -->
+    <script type="module" src="dailypolygon/blob/main/app.js"></script> <!-- Update with the correct path -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
