--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WalletConnect Example</title>
-    <script type="module" src="app.js"></script> <!-- Update with the correct path -->
-    <link rel="stylesheet" href="styles.css">
+    <!-- Load Web3 and WalletConnect from CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@latest/dist/WalletConnectProvider.min.js"></script>
+    <script type="module" src="app.js"></script> <!-- Ensure the path is correct -->
+     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
