--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <h2>Results:</h2>
     <pre id="results"></pre>
 
-    <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
