--- a/index.html
+++ b/index.html
@@ -3,22 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My DApp</title>
-    <script src="https://cdn.jsdelivr.net/npm/web3/dist/web3.min.js"></script>
-    <script src="https://unpkg.com/@walletconnect/web3-provider/dist/umd/index.min.js"></script>
+    <title>Daily Polygon DApp</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+    <script src="app.js" defer></script> <!-- Use defer to load JS after HTML -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline';">
 </head>
 <body>
-    <h1>My DApp</h1>
-    <input type="text" id="walletAddress" placeholder="Enter Wallet Address" />
-    <button id="connectButton">Connect Wallet</button>
-    <button id="getBalanceButton">Get Balance</button>
-    <button id="getTransactionsButton">Get Transactions</button>
-    <button id="investButton">Invest</button>
-    <button id="withdrawButton">Withdraw</button>
+    <header>
+        <h1>Daily Polygon</h1>
+    </header>
+    <main>
+        <section id="investment">
+            <h2>Invest for daily income, get income for years</h2>
+            <form id="investmentForm" onsubmit="return validateForm();">
+                <label for="amount">Amount (POL):</label>
+                <input type="number" id="amount" min="1" step="0.01" required>
+                <label for="referrer">Referrer Address:</label>
+                <input type="text" id="referrer" placeholder="Optional">
+                <button type="submit">Invest</button>
+            </form>
+        </section>
+        
+        <section id="withdraw">
+            <h2>Withdraw</h2>
+            <button id="withdrawButton" onclick="confirmWithdrawal();">Withdraw</button>
+        </section>
 
-    <h2>Results:</h2>
-    <pre id="results"></pre>
-
-    <script src="app.js"></script>
+        <section id="userInfo">
+            <h2>Your Info</h2>
+            <div>
+                <p>Total Deposits: <span id="totalDeposits">0</span> POL</p>
+                <p>Total Withdrawn: <span id="totalWithdrawn">0</span> POL</p>
+                <p>Available for Withdrawal: <span id="availableBalance">0</span> POL</p>
+            </div>
+        </section>
+    </main>
+    
+    <footer>
+        <p>&copy; 2024 Daily Polygon DApp</p>
+    </footer>
 </body>
 </html>
