--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Daily Polygon DApp</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-    <script src="app.js" defer></script> <!-- Use defer to load JS after HTML -->
+    <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.7.1/dist/umd/index.min.js"></script>
+    <script src="app.js" defer></script>
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline';">
 </head>
 <body>
@@ -14,7 +15,12 @@
         <h1>Daily Polygon</h1>
     </header>
     <main>
-        <section id="investment">
+        <section id="walletConnect">
+            <h2>Connect Your Wallet</h2>
+            <button id="connectButton">Connect Wallet</button>
+        </section>
+        
+        <section id="investment" style="display: none;">
             <h2>Invest for daily income, get income for years</h2>
             <form id="investmentForm" onsubmit="return validateForm();">
                 <label for="amount">Amount (POL):</label>
@@ -25,12 +31,12 @@
             </form>
         </section>
         
-        <section id="withdraw">
+        <section id="withdraw" style="display: none;">
             <h2>Withdraw</h2>
             <button id="withdrawButton" onclick="confirmWithdrawal();">Withdraw</button>
         </section>
 
-        <section id="userInfo">
+        <section id="userInfo" style="display: none;">
             <h2>Your Info</h2>
             <div>
                 <p>Total Deposits: <span id="totalDeposits">0</span> POL</p>
@@ -43,5 +49,63 @@
     <footer>
         <p>&copy; 2024 Daily Polygon DApp</p>
     </footer>
+
+    <script>
+        let account;
+        let web3;
+        let provider;
+
+        // Smart contract ABI and address
+        const contractAddress = "0xYourContractAddress"; // Replace with your contract address
+        const abi = [/* Your contract ABI here */];
+
+        document.getElementById('connectButton').onclick = async () => {
+            // Initialize WalletConnect Provider
+            provider = new WalletConnectProvider.default({
+                rpc: {
+                    137: "https://polygon-rpc.com/", // Polygon mainnet
+                },
+            });
+            await provider.enable();
+            web3 = new Web3(provider);
+            const accounts = await web3.eth.getAccounts();
+            account = accounts[0];
+            console.log("Connected account:", account);
+            document.getElementById('walletConnect').style.display = 'none';
+            document.getElementById('investment').style.display = 'block';
+            document.getElementById('withdraw').style.display = 'block';
+            document.getElementById('userInfo').style.display = 'block';
+            // Fetch user info and update UI
+            updateUserInfo();
+        };
+
+        async function updateUserInfo() {
+            // Fetch total deposits, withdrawals, and available balance
+            const contract = new web3.eth.Contract(abi, contractAddress);
+            const totalDeposits = await contract.methods.totalDeposits(account).call();
+            const totalWithdrawn = await contract.methods.totalWithdrawn(account).call();
+            const availableBalance = await contract.methods.availableBalance(account).call();
+            document.getElementById('totalDeposits').innerText = totalDeposits;
+            document.getElementById('totalWithdrawn').innerText = totalWithdrawn;
+            document.getElementById('availableBalance').innerText = availableBalance;
+        }
+
+        document.getElementById('investmentForm').onsubmit = async (event) => {
+            event.preventDefault();
+            const amount = document.getElementById('amount').value;
+            const referrer = document.getElementById('referrer').value;
+            const contract = new web3.eth.Contract(abi, contractAddress);
+            await contract.methods.invest(referrer).send({ from: account, value: web3.utils.toWei(amount, 'ether') });
+            console.log("Investment successful");
+            updateUserInfo(); // Update user info after investment
+        };
+
+        async function confirmWithdrawal() {
+            const contract = new web3.eth.Contract(abi, contractAddress);
+            await contract.methods.withdraw().send({ from: account });
+            console.log("Withdrawal successful");
+            updateUserInfo(); // Update user info after withdrawal
+        }
+    </script>
 </body>
 </html>
