--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Daily Polygon DApp</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+    <script src="https://unpkg.com/@walletconnect/web3-provider/dist/umd/index.min.js"></script>
     <script src="app.js" type="module" defer></script>
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline';">
 </head>
@@ -21,7 +22,7 @@
         
         <section id="investment">
             <h2>Invest for Daily Income, Get Income for Years</h2>
-            <form id="investmentForm" onsubmit="return validateForm();">
+            <form id="investmentForm">
                 <label for="amount">Amount (POL):</label>
                 <input type="number" id="amount" min="1" step="0.01" required>
                 
