--- a/index.html
+++ b/index.html
@@ -5,43 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Polygon DApp</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-    <script src="app.js" defer></script> <!-- Use defer to load JS after HTML -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline';">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';">
 </head>
 <body>
-    <header>
-        <h1>Daily Polygon</h1>
-    </header>
-    <main>
-        <section id="investment">
-            <h2>Invest for daily income, get income for years</h2>
-            <form id="investmentForm" onsubmit="return validateForm();">
-                <label for="amount">Amount (POL):</label>
-                <input type="number" id="amount" min="1" step="0.01" required>
-                <label for="referrer">Referrer Address:</label>
-                <input type="text" id="referrer" placeholder="Optional">
-                <button type="submit">Invest</button>
-            </form>
-        </section>
-        
-        <section id="withdraw">
-            <h2>Withdraw</h2>
-            <button id="withdrawButton" onclick="confirmWithdrawal();">Withdraw</button>
-        </section>
-
-        <section id="userInfo">
-            <h2>Your Info</h2>
-            <div>
-                <p>Total Deposits: <span id="totalDeposits">0</span> POL</p>
-                <p>Total Withdrawn: <span id="totalWithdrawn">0</span> POL</p>
-                <p>Available for Withdrawal: <span id="availableBalance">0</span> POL</p>
-            </div>
-        </section>
-    </main>
-    
-    <footer>
-        <p>&copy; 2024 Daily Polygon DApp</p>
-    </footer>
+    <div id="root"></div> <!-- This is where your React app will be rendered -->
+    <script src="https://unpkg.com/react/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://unpkg.com/@thirdweb-dev/react/umd/index.js" crossorigin></script>
+    <script src="app.js" defer></script> <!-- Load your React app -->
 </body>
 </html>
