--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Daily Polygon DApp</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-    <script src="https://unpkg.com/@walletconnect/web3-provider@1.0.0/dist/umd/index.min.js"></script>
+    <script src="<script src="https:<script src="https://unpkg.com/@walletconnect/web3-provider@latest/dist/umd/index.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/ethers/dist/ethers.umd.min.js"></script>
     <script>
         let provider;
