--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Daily Polygon DApp</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-    <script src="https://unpkg.com/@thirdweb-dev/sdk/dist/thirdweb.min.js"></script> <!-- Thirdweb SDK -->
+    <script src="https://cdn.jsdelivr.net/npm/@thirdweb-dev/sdk@latest/dist/thirdweb.min.js"></script>
+     <!-- Thirdweb SDK -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https://raw.githubusercontent.com; script-src 'self' https://cdn.jsdelivr.net https://unpkg.com; style-src 'self' 'unsafe-inline';">
 </head>
 <body>
