--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    Import trace for requested module:
+    ./node_modules/@wagmi/connectors/dist/metaMask.js
+    ./node_modules/@wagmi/core/dist/connectors/metaMask.js
+    ./node_modules/wagmi/dist/connectors/metaMask.js
+    ./node_modules/connectkit/build/index.es.js
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Polygon DApp</title>
